# symkit

./: .gitignore  .pre-commit-config.yaml  README.md  asv.conf.json  pyproject.toml
benchmarks/: symbolic_regression.py
symkit/: __init__.py  core.py  expression.py  metrics.py  online_sre.py  operators.py  population.py  sre.py  test_expression.py  test_online_sre.py  test_operators.py  test_sklearn.py  test_sre.py
symkit/tests/: test_expression.py  test_online_sre.py  test_operators.py  test_population.py  test_sklearn.py  test_sre.py
