[build-system]
requires = ["flit_core >=3.2,<4", "scikit-learn>=0.23", "sympy", "polars==0.12.5", "pandas"]
build-backend = "flit_core.buildapi"

[project]
name = "symkit"
authors = [{name = "Rémi Adon", email = "remi.adon@gmail.com"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
    "pyarrow",
]

[project.urls]
Home = "https://github.com/remiadon/symkit"